--- a/multi_html/index.html
+++ b/multi_html/index.html
@@ -38,13 +38,13 @@
             "ABOUT"
           </p>
           <video width="200" height="200">
-            <source src="gift_1.mp4" type="video/mp4" />
+            <source src="/images/gift_1.mp4" type="video/mp4" />
           </video>
           <video width=300" height="200">
-            <source src="gift_2.mp4" type="video/mp4" />
+            <source src="/images/gift_2.mp4" type="video/mp4" />
           </video>
-          <img src="/aniyuki-kaneki-tokyo-ghoul-gif-29.gif" alt="" />
-          <img src="/static-assets-upload1062048988490892480.webp" alt="">
+          <img src="/images/aniyuki-kaneki-tokyo-ghoul-gif-29.gif" alt="" />
+          <img src="/images/static-assets-upload1062048988490892480.webp" alt="">
           
         </article>
       </section>
