--- a/multi_html/about.html
+++ b/multi_html/about.html
@@ -29,7 +29,7 @@
           <div>
             <div class="shadow">
               <div class="about-img">
-                <img src="/1660781070527.jpeg" alt="about image" />
+                <img src="/images/1660781070527.jpeg" alt="about image" />
               </div>
             </div>
 
